# scalable-multimodal-similarity-search

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  clean-and-rebind-module.sh  requirements.txt  run-docker.sh  run-tests-from-source-code.sh
LICENSES/: Apache-2.0.txt  BSL-1.0.txt  MPL-2.0.txt
cpp/: 2x1k-euclidean2-analysis.txt  CMakeLists.txt  add.cpp  add.hpp  common.hpp  main.cpp
cpp/analysis-results/: 2x10k-euclidean2-analysis.txt  2x1k-cosine2-analysis.txt
cpp/include/: AbstractMultiIndex.hpp  AbstractMultiVecIndex.hpp  DistanceMetrics.hpp  ExactMultiIndex.hpp  ExactMultiVecIndex.hpp  MultiHNSW.hpp  MultiVecHNSW.hpp  common.hpp  utils.hpp
cpp/include/simple-knn/: AbstractKNNIndex.hpp  ExactKNNIndex.hpp
cpp/index/: AbstractMultiIndex.cpp  AbstractMultiIndex.hpp  AbstractMultiVecIndex.cpp  DistanceMetrics.cpp  DistanceMetrics.hpp  ExactKNNIndex.cpp  ExactKNNIndex.hpp  ExactMultiIndex.cpp  ExactMultiIndex.hpp  ExactMultiVecIndex.cpp  KNNIndex.hpp  MultiHNSW.cpp  MultiHNSWBuilder.cpp  MultiVecHNSW.cpp  MultiVecHNSWBuilder.cpp  add.cpp  add.hpp  utils.cpp
cpp/index/include/: AbstractMultiVecIndex.hpp  DistanceMetrics.hpp  MultiVecHNSW.hpp  common.hpp
cpp/index/include/serde/: serdeUtils.hpp
cpp/index/serde/: serdeAbstractMultiVecIndex.cpp  serdeMultiVecHNSW.cpp
cpp/index/simple-knn/: ExactKNNIndex.cpp  ExactKNNIndex.hpp
cpp/pybinding/: binder.cpp  setup.py
cpp/tests/: benchmark_dist_calculations.cpp  test.cpp  test_exact.cpp  test_metrics.cpp  test_multi_hnsw.cpp  test_multivec_hnsw.cpp  test_performance.cpp  test_utils.cpp
data/: LAION_20k_metadata.parquet  download.py  urls.txt
data_processing/: dataset_prep.ipynb  dataset_preparation.ipynb  dataset_test.ipynb  embedding_generation.ipynb
data_processing/dataset_preparation/: dataset_prep.ipynb  dataset_test.ipynb
data_processing/embedding_generation/: embedding.ipynb
experiments/: README.md
notebooks/: dataset_preparation.ipynb  embedding_generation.ipynb  find_duplicates.ipynb  play_with_dataset.ipynb  plot_graphs.ipynb  plot_graphs_4_modalities.ipynb  plot_graphs_construction_search.ipynb  plot_graphs_weights_exp.ipynb  plot_other_graphs.ipynb  setup-4-modality-dataset.ipynb
scripts/: clean-and-rebind-module.sh  run-docker.sh  run-tests-from-source-code.sh
src/: data_download.py  embedding_generation.py  evaluation.py  evaluation_params.py  load_dataset.py  main.py  main_large_entity.py  multimodal_search_interface.py  pybindtest.py  visual_demo.py  visual_demo_4_modalities.py
src/common/: constants.py  load_dataset.py  logger.py
src/common/index-interfaces/: exact_multimodal_index.py  multimodal_hnsw.py
src/data_processing/: dataset_prep.ipynb
src/dataset_processing/: data_download.py  embedding_generation.py  find_duplicates.py  remove_placeholders.py  transform_dataset_with_audio.py  transform_dataset_with_video.py
src/demo/: visual_demo.py  visual_demo_4_modalities.py
src/embedding_generation/: embedding_generator.py  image_embeddings.py  text_embeddings.py
src/embedding_generators/: audio_embeddings.py  image_embeddings.py  text_embeddings.py  video_embeddings.py
src/evaluation/: evaluation.py  plot_utils.py  weights_experiments.py
src/experiments/: evaluation.py  evaluation_params.py  main.py  main_large_entity.py  plot_utils.py  utils.py  weights_experiments.py
src/index/: multimodal_index_interface.py
test/data_processing/: test_dataset.py  test_vector_dataset.py
tests/: test_bindings.py  test_exact_multi_index_bindings.py  test_exact_multivec_index_bindings.py  test_multi_hnsw_index.py  test_multivec_hnsw_index.py
tests/data_processing/: test_datasets.py
